--- a/Client/templates/terms.html
+++ b/Client/templates/terms.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Khong co cailoz gi dau. Vo chi??</h2>
+    <h2>Things just got out of hand - Supreme Strange</h2>
+    <a href="{{ url_for('signup') }}">Go Back</a>
 </body>
 </html>
