--- a/Client/templates/login.html
+++ b/Client/templates/login.html
@@ -7,6 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Log In</title>
+    <style>
+        .alert-error{
+            padding: 5;
+            background-color: red;
+            color: white;
+        }
+    </style>
 
 </head>
 
@@ -15,26 +22,38 @@
     <section class="vh-100">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
+                {% block content %}
+                    <div class="container">
+                        {% for message in get_flashed_messages() %}
+                        <div class="alert alert-danger"> {{ message }} </div>
+                        {% endfor %}
+
+                        {% block page_content %}{% endblock %}
+                    </div>
+                {% endblock %}
+
                 <div class="col-12 col-md-8 col-lg-6 col-xl-5">
                     <div class="card shadow-2-strong" style="border-radius: 1rem;">
                         <div class="card-body p-5 text-center">
                 
                             <h2 class="mb-5">Sign In</h2>
                             
-                            <div class="form-floating">
-                                <input type="text" class="form-control" id="floatingName" placeholder="Input Username">
-                                <label for="floatingName">Username</label>
-                            </div>
-                            <div class="form-floating mt-3">
-                                <input type="password" class="form-control" id="floatingPassword" placeholder="Input Password">
-                                <label for="floatingPassword">Password</label>
-                            </div>
-                            <div class="d-grid mt-5">
-                                <button class="btn btn-primary btn-lg btn-block" type="submit">Sign In</button>
-                            </div>
-                            <div class="mt-5">
-                                <p class="mb-0">Don't have an account? <a href="{{ url_for('signup') }}" class="text-primary-50 fw-bold">Sign Up</a></p>
-                            </div>
+                            <form action="{{ url_for('login') }}" method="post">
+                                <div class="form-floating">
+                                    <input type="text" class="form-control" id="floatingName" name="usrname" placeholder="Input Username">
+                                    <label for="floatingName">Username</label>
+                                </div>
+                                <div class="form-floating mt-3">
+                                    <input type="password" class="form-control" id="floatingPassword" name="pssword" placeholder="Input Password">
+                                    <label for="floatingPassword">Password</label>
+                                </div>
+                                <div class="d-grid mt-5">
+                                    <button class="btn btn-primary btn-lg btn-block" type="submit">Sign In</button>
+                                </div>
+                                <div class="mt-5">
+                                    <p class="mb-0">Don't have an account? <a href="{{ url_for('signup') }}" class="text-primary-50 fw-bold">Sign Up</a></p>
+                                </div>
+                            </form>
                 
                         </div>
                     </div>
