--- a/Client/templates/signup.html
+++ b/Client/templates/signup.html
@@ -16,23 +16,34 @@
         <div class="mask d-flex align-items-center h-100">
           <div class="container h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
+              {% block content %}
+                    <div class="container">
+                        {% for message in get_flashed_messages() %}
+                        <div class="alert alert-danger"> {{ message }} </div>
+                        {% endfor %}
+
+                        {% block page_content %}{% endblock %}
+                    </div>
+              {% endblock %}
+
               <div class="col-12 col-md-9 col-lg-7 col-xl-6">
                 <div class="card" style="border-radius: 15px;">
                   <div class="card-body p-5">
                     <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
+                      <form action="{{ url_for('signup') }}" method="post"></form>
                       <div class="form-floating mb-4">
-                        <input type="text" class="form-control" id="floatingName" placeholder="Input Username">
+                        <input type="text" class="form-control" id="floatingName" name="usrname" placeholder="Input Username">
                         <label for="floatingName">Username</label>
                       </div>
       
                       <div class="form-floating mb-4">
-                        <input type="password" class="form-control" id="floatingPassword" placeholder="Input Password">
+                        <input type="password" class="form-control" id="floatingPassword" name="pssword" placeholder="Input Password">
                         <label for="floatingPassword">Password</label>
                       </div>
       
                       <div class="form-floating mb-4">
-                        <input type="password" class="form-control" id="floatingPassword2" placeholder="Input Password again">
+                        <input type="password" class="form-control" id="floatingPassword2" name="pssword2" placeholder="Input Password again">
                         <label for="floatingPassword2">Confirm Password</label>
                       </div>
 
