--- a/Client/templates/home.html
+++ b/Client/templates/home.html
@@ -12,7 +12,11 @@
 
 <body>
     
-    
+    <h1>Things just got out of hand</h1>
+    <form method="POST" action="" enctype="multipart/form-data">
+      <p><input type="file" name="file"></p>
+      <p><input type="submit" value="Submit"></p>
+    </form>
 
 </body>
 </html>
