--- a/Client/templates/signup.html
+++ b/Client/templates/signup.html
@@ -1,72 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Sign Up</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <title>Sign Up</title>
 
 </head>
 
 <body>
-    
-    <section class="vh-100">
-        <div class="mask d-flex align-items-center h-100">
-          <div class="container h-100">
-            <div class="row d-flex justify-content-center align-items-center h-100">
-              {% block content %}
-                    <div class="container">
-                        {% for message in get_flashed_messages() %}
-                        <div class="alert alert-danger"> {{ message }} </div>
-                        {% endfor %}
 
-                        {% block page_content %}{% endblock %}
-                    </div>
-              {% endblock %}
+  <section class="vh-100">
+    <div class="mask d-flex align-items-center h-100">
+      <div class="container h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          {% block content %}
+          <div class="container">
+            {% for message in get_flashed_messages() %}
+            <div class="alert alert-danger"> {{ message }} </div>
+            {% endfor %}
 
-              <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-                <div class="card" style="border-radius: 15px;">
-                  <div class="card-body p-5">
-                    <h2 class="text-uppercase text-center mb-5">Create an account</h2>
+            {% block page_content %}{% endblock %}
+          </div>
+          {% endblock %}
 
-                      <form action="{{ url_for('signup') }}" method="post"></form>
-                      <div class="form-floating mb-4">
-                        <input type="text" class="form-control" id="floatingName" name="usrname" placeholder="Input Username">
-                        <label for="floatingName">Username</label>
-                      </div>
-      
-                      <div class="form-floating mb-4">
-                        <input type="password" class="form-control" id="floatingPassword" name="pssword" placeholder="Input Password">
-                        <label for="floatingPassword">Password</label>
-                      </div>
-      
-                      <div class="form-floating mb-4">
-                        <input type="password" class="form-control" id="floatingPassword2" name="pssword2" placeholder="Input Password again">
-                        <label for="floatingPassword2">Confirm Password</label>
-                      </div>
+          <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+            <div class="card" style="border-radius: 15px;">
+              <div class="card-body p-5">
+                <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
-                      <div class="form-check d-flex justify-content-center mb-5">
-                        <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg"/>
-                        <label class="form-check-label" for="form2Example3g">
-                          I agree all statements in <a href="{{ url_for('terms') }}" class="text-body"><u>Terms of service</u></a>
-                        </label>
-                      </div>
-      
-                      <div class="d-grid justify-content-center">
-                        <button type="submit" class="btn btn-primary btn-block btn-lg">Sign Up</button>
-                      </div>
-
-                      <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="{{ url_for('login') }}" class="fw-bold text-body"><u>Login here</u></a></p>
-      
+                <form action="{{ url_for('signup') }}" method="post">
+                  <div class="form-floating mb-4">
+                    <input type="text" class="form-control" id="floatingName" name="usrname"
+                      placeholder="Input Username">
+                    <label for="floatingName">Username</label>
                   </div>
-                </div>
+
+                  <div class="form-floating mb-4">
+                    <input type="password" class="form-control" id="floatingPassword" name="pssword"
+                      placeholder="Input Password">
+                    <label for="floatingPassword">Password</label>
+                  </div>
+
+                  <div class="form-floating mb-4">
+                    <input type="password" class="form-control" id="floatingPassword2" name="pssword2"
+                      placeholder="Input Password again">
+                    <label for="floatingPassword2">Confirm Password</label>
+                  </div>
+
+                  <div class="form-check d-flex justify-content-center mb-5">
+                    <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" />
+                    <label class="form-check-label" for="form2Example3g">
+                      I agree all statements in <a href="{{ url_for('terms') }}" class="text-body"><u>Terms of
+                          service</u></a>
+                    </label>
+                  </div>
+
+                  <div class="d-grid justify-content-center">
+                    <button type="submit" class="btn btn-primary btn-block btn-lg">Sign Up</button>
+                  </div>
+
+                  <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="{{ url_for('login') }}"
+                      class="fw-bold text-body"><u>Login here</u></a></p>
+                </form>
+
               </div>
             </div>
           </div>
         </div>
-    </section>
+      </div>
+    </div>
+  </section>
 
 </body>
+
 </html>
