--- a/Client/templates/home.html
+++ b/Client/templates/home.html
@@ -1,22 +1,472 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Home</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Bootstrap - Image gallery 2</title>
+
+  <style>
+    body {
+      background-color: #f4f7f6;
+      margin-top: 20px;
+    }
+
+    .file_manager .file a:hover .hover,
+    .file_manager .file .file-name small {
+      display: block
+    }
+
+    .file_manager .file {
+      padding: 0 !important
+    }
+
+    .file_manager .file .icon {
+      text-align: center
+    }
+
+
+    .file_manager .file {
+      position: relative;
+      border-radius: .55rem;
+      overflow: hidden
+    }
+
+    .file_manager .file .image,
+    .file_manager .file .icon {
+      max-height: 180px;
+      overflow: hidden;
+      background-size: cover;
+      background-position: top
+    }
+
+    .file_manager .file .hover {
+      position: absolute;
+      right: 10px;
+      top: 10px;
+      display: none;
+      transition: all 0.2s ease-in-out
+    }
+
+    .file_manager .file a:hover .hover {
+      transition: all 0.2s ease-in-out
+    }
+
+    .file_manager .file .icon {
+      padding: 15px 10px;
+      display: table;
+      width: 100%
+    }
+
+    .file_manager .file .icon i {
+      display: table-cell;
+      font-size: 30px;
+      vertical-align: middle;
+      color: #777;
+      line-height: 100px
+    }
+
+    .file_manager .file .file-name {
+      padding: 10px;
+      border-top: 1px solid #f7f7f7
+    }
+
+    .file_manager .file .file-name small .date {
+      float: right
+    }
+
+    .folder {
+      padding: 20px;
+      display: block;
+      color: #777
+    }
+
+    a {
+      text-decoration: none;
+    }
+
+    @media only screen and (max-width: 992px) {
+      .file_manager .nav-tabs {
+        padding-left: 0;
+        padding-right: 0
+      }
+
+      .file_manager .nav-tabs .nav-item {
+        display: inline-block
+      }
+    }
+
+    .card {
+      background: #fff;
+      transition: .5s;
+      border: 0;
+      margin-bottom: 30px;
+      border-radius: .55rem;
+      position: relative;
+      width: 100%;
+      box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
+    }
+  </style>
 </head>
 
 <body>
-    
-    <h1>Things just got out of hand</h1>
-    <form method="POST" action="" enctype="multipart/form-data">
-      <p><input type="file" name="file"></p>
-      <p><input type="submit" value="Submit"></p>
-    </form>
+
+  <div class="container">
+    <div class="d-flex justify-content-end">
+      <div class="row">
+        <div class="col">
+          <p>Hagon</p>
+        </div>
+        <div class="col">
+          <a href="#" class="text-danger">Signout</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid">
+      <div class="mt-0 p-5 text-dark rounded">
+        <div class="row">
+          <div class="col">
+            <h1>Supreme Strange</h1>
+            <p>Things just got out of hand</p>
+          </div>
+          <div class="col col-lg-auto">
+            <button class="btn btn-outline-primary justify-content-end align-items-center">Download All</button>
+            <button class="btn btn-outline-primary justify-content-end align-items-center">Upload Image</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="main-content" class="file_manager">
+      <div class="container">
+        <div class="row clearfix">
+
+          <!--
+          {% if filenames %}
+            {% for filename in filenames %}
+              <div class="col-lg-3 col-md-4 col-sm-12">
+                <div class="card">
+                  <div class="file">
+                    <a href="#">
+                      <div class="hover">
+                        <button type="button" class="btn btn-icon btn-outline-dark">
+                          <i class="fas fa-share-alt"></i>
+                        </button>
+                        <button type="button" class="btn btn-icon btn-primary">
+                          <i class="fas fa-arrow-down"></i>
+                        </button>
+                      </div>
+                      <div class="icon">
+                        <i class="far fa-image "></i>
+                      </div>
+                      <div class="file-name">
+                        <p class="m-b-5 text-muted">Document_2017.doc</p>
+                        <small>Size: 42KB</small>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            {% endfor %}
+          {% endif %}
+          -->
+
+          <div class="col-lg-3 col-md-4 col-sm-12">
+            <div class="card">
+              <div class="file">
+                <a href="#">
+                  <div class="hover">
+                    <button type="button" class="btn btn-icon btn-outline-dark">
+                      <i class="fas fa-share-alt"></i>
+                    </button>
+                    <button type="button" class="btn btn-icon btn-primary">
+                      <i class="fas fa-arrow-down"></i>
+                    </button>
+                  </div>
+                  <div class="icon">
+                    <i class="far fa-image "></i>
+                  </div>
+                  <div class="file-name">
+                    <p class="m-b-5 text-muted">Document_2017.doc</p>
+                    <small>Size: 42KB</small>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-12">
+            <div class="card">
+              <div class="file">
+                <a href="#">
+                  <div class="hover">
+                    <button type="button" class="btn btn-icon btn-outline-dark">
+                      <i class="fas fa-share-alt"></i>
+                    </button>
+                    <button type="button" class="btn btn-icon btn-primary">
+                      <i class="fas fa-arrow-down"></i>
+                    </button>
+                  </div>
+                  <div class="icon">
+                    <i class="far fa-image "></i>
+                  </div>
+                  <div class="file-name">
+                    <p class="m-b-5 text-muted">Document_2017.doc</p>
+                    <small>Size: 89KB</small>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-12">
+            <div class="card">
+              <div class="file">
+                <a href="#">
+                  <div class="hover">
+                    <button type="button" class="btn btn-icon btn-outline-dark">
+                      <i class="fas fa-share-alt"></i>
+                    </button>
+                    <button type="button" class="btn btn-icon btn-primary">
+                      <i class="fas fa-arrow-down"></i>
+                    </button>
+                  </div>
+                  <div class="icon">
+                    <i class="far fa-image "></i>
+                  </div>
+                  <div class="file-name">
+                    <p class="m-b-5 text-muted">Document_2017.doc</p>
+                    <small>Size: 89KB</small>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-12">
+            <div class="card">
+              <div class="file">
+                <a href="#">
+                  <div class="hover">
+                    <button type="button" class="btn btn-icon btn-outline-dark">
+                      <i class="fas fa-share-alt"></i>
+                    </button>
+                    <button type="button" class="btn btn-icon btn-primary">
+                      <i class="fas fa-arrow-down"></i>
+                    </button>
+                  </div>
+                  <div class="icon">
+                    <i class="far fa-image "></i>
+                  </div>
+                  <div class="file-name">
+                    <p class="m-b-5 text-muted">Report2016.xls</p>
+                    <small>Size: 68KB</small>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-12">
+            <div class="card">
+              <div class="file">
+                <a href="#">
+                  <div class="hover">
+                    <button type="button" class="btn btn-icon btn-outline-dark">
+                      <i class="fas fa-share-alt"></i>
+                    </button>
+                    <button type="button" class="btn btn-icon btn-primary">
+                      <i class="fas fa-arrow-down"></i>
+                    </button>
+                  </div>
+                  <div class="icon">
+                    <i class="far fa-image "></i>
+                  </div>
+                  <div class="file-name">
+                    <p class="m-b-5 text-muted">Report2016.xls</p>
+                    <small>Size: 68KB</small>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-12">
+            <div class="card">
+              <div class="file">
+                <a href="#">
+                  <div class="hover">
+                    <button type="button" class="btn btn-icon btn-outline-dark">
+                      <i class="fas fa-share-alt"></i>
+                    </button>
+                    <button type="button" class="btn btn-icon btn-primary">
+                      <i class="fas fa-arrow-down"></i>
+                    </button>
+                  </div>
+                  <div class="icon">
+                    <i class="far fa-image "></i>
+                  </div>
+                  <div class="file-name">
+                    <p class="m-b-5 text-muted">asdf hhkj.pdf</p>
+                    <small>Size: 3MB</small>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-12">
+            <div class="card">
+              <div class="file">
+                <a href="#">
+                  <div class="hover">
+                    <button type="button" class="btn btn-icon btn-outline-dark">
+                      <i class="fas fa-share-alt"></i>
+                    </button>
+                    <button type="button" class="btn btn-icon btn-primary">
+                      <i class="fas fa-arrow-down"></i>
+                    </button>
+                  </div>
+                  <div class="icon">
+                    <i class="far fa-image "></i>
+                  </div>
+                  <div class="file-name">
+                    <p class="m-b-5 text-muted">asdf hhkj.pdf</p>
+                    <small>Size: 3MB</small>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-12">
+            <div class="card">
+              <div class="file">
+                <a href="#">
+                  <div class="hover">
+                    <button type="button" class="btn btn-icon btn-outline-dark">
+                      <i class="fas fa-share-alt"></i>
+                    </button>
+                    <button type="button" class="btn btn-icon btn-primary">
+                      <i class="fas fa-arrow-down"></i>
+                    </button>
+                  </div>
+                  <div class="icon">
+                    <i class="far fa-image "></i>
+                  </div>
+                  <div class="file-name">
+                    <p class="m-b-5 text-muted">asdf hhkj.pdf</p>
+                    <small>Size: 3MB</small>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-12">
+            <div class="card">
+              <div class="file">
+                <a href="#">
+                  <div class="hover">
+                    <button type="button" class="btn btn-icon btn-outline-dark">
+                      <i class="fas fa-share-alt"></i>
+                    </button>
+                    <button type="button" class="btn btn-icon btn-primary">
+                      <i class="fas fa-arrow-down"></i>
+                    </button>
+                  </div>
+                  <div class="icon">
+                    <i class="far fa-image "></i>
+                  </div>
+                  <div class="file-name">
+                    <p class="m-b-5 text-muted">asdf hhkj.pdf</p>
+                    <small>Size: 3MB</small>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-12">
+            <div class="card">
+              <div class="file">
+                <a href="#">
+                  <div class="hover">
+                    <button type="button" class="btn btn-icon btn-outline-dark">
+                      <i class="fas fa-share-alt"></i>
+                    </button>
+                    <button type="button" class="btn btn-icon btn-primary">
+                      <i class="fas fa-arrow-down"></i>
+                    </button>
+                  </div>
+                  <div class="icon">
+                    <i class="far fa-image "></i>
+                  </div>
+                  <div class="file-name">
+                    <p class="m-b-5 text-muted">Report2016.xls</p>
+                    <small>Size: 68KB</small>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-12">
+            <div class="card">
+              <div class="file">
+                <a href="#">
+                  <div class="hover">
+                    <button type="button" class="btn btn-icon btn-outline-dark">
+                      <i class="fas fa-share-alt"></i>
+                    </button>
+                    <button type="button" class="btn btn-icon btn-primary">
+                      <i class="fas fa-arrow-down"></i>
+                    </button>
+                  </div>
+                  <div class="icon">
+                    <i class="far fa-image "></i>
+                  </div>
+                  <div class="file-name">
+                    <p class="m-b-5 text-muted">Report2017.xls</p>
+                    <small>Size: 103KB</small>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-12">
+            <div class="card">
+              <div class="file">
+                <a href="#">
+                  <div class="hover">
+                    <button type="button" class="btn btn-icon btn-outline-dark">
+                      <i class="fas fa-share-alt"></i>
+                    </button>
+                    <button type="button" class="btn btn-icon btn-primary">
+                      <i class="fas fa-arrow-down"></i>
+                    </button>
+                  </div>
+                  <div class="icon">
+                    <i class="far fa-image "></i>
+                  </div>
+                  <div class="file-name">
+                    <p class="m-b-5 text-muted">Report2016.xls</p>
+                    <small>Size: 68KB</small>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/js/fontawesome.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!--
+    <button type="button" class="btn btn-icon btn-danger">
+      <i class="fas fa-trash-alt"></i>
+    </button>
+  -->
 
 </body>
+
 </html>
