--- a/Client/templates/home.html
+++ b/Client/templates/home.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <title>Bootstrap - Image gallery 2</title>
+  <title>Home</title>
 
   <style>
     body {
@@ -135,7 +135,9 @@
           </div>
           <div class="col col-lg-auto">
             <button class="btn btn-outline-primary justify-content-end align-items-center">Download All</button>
-            <button class="btn btn-outline-primary justify-content-end align-items-center">Upload Image</button>
+            <a href="{{ url_for('upload') }}" class="btn btn-outline-primary justify-content-end align-items-center">
+              Upload Image
+            </a>
           </div>
         </div>
       </div>
