--- a/Client/templates/home.html
+++ b/Client/templates/home.html
@@ -146,310 +146,31 @@
     <div id="main-content" class="file_manager">
       <div class="container">
         <div class="row clearfix">
-
             {% for file in files %}
-              <div class="col-lg-3 col-md-4 col-sm-12">
-                <div class="card">
-                  <div class="file">
-                    <a href="#">
-                      <div class="hover">
-                        <button type="button" class="btn btn-icon btn-outline-dark">
-                          <i class="fas fa-share-alt"></i>
-                        </button>
-                        <button type="button" class="btn btn-icon btn-primary">
-                          <i class="fas fa-arrow-down"></i>
-                        </button>
-                      </div>
-                      <div class="icon">
-                        <i class="far fa-image "></i>
-                      </div>
-                      <div class="file-name">
-                        <p class="m-b-5 text-muted">{{ file[0] }}</p>
-                        <small>Size: {{ file[1] }}</small>
-                      </div>
-                    </a>
+                <div class="col-lg-3 col-md-4 col-sm-12">
+                  <div class="card">
+                    <div class="file">
+                      <a href="#">
+                        <div class="hover">
+                          <button type="button" class="btn btn-icon btn-outline-dark">
+                            <i class="fas fa-share-alt"></i>
+                          </button>
+                          <button type="button" class="btn btn-icon btn-primary">
+                            <i class="fas fa-arrow-down"></i>
+                          </button>
+                        </div>
+                        <div class="icon">
+                          <i class="far fa-image "></i>
+                        </div>
+                        <div class="file-name">
+                          <p class="m-b-5 text-muted">{{ file[0] }}</p>
+                          <small>Size: {{ file[1] }} KB</small>
+                        </div>
+                      </a>
+                    </div>
                   </div>
                 </div>
-              </div>
             {% endfor %}
-         
-
-          <!-- <div class="col-lg-3 col-md-4 col-sm-12">
-            <div class="card">
-              <div class="file">
-                <a href="#">
-                  <div class="hover">
-                    <button type="button" class="btn btn-icon btn-outline-dark">
-                      <i class="fas fa-share-alt"></i>
-                    </button>
-                    <button type="button" class="btn btn-icon btn-primary">
-                      <i class="fas fa-arrow-down"></i>
-                    </button>
-                  </div>
-                  <div class="icon">
-                    <i class="far fa-image "></i>
-                  </div>
-                  <div class="file-name">
-                    <p class="m-b-5 text-muted">Document_2017.doc</p>
-                    <small>Size: 42KB</small>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-12">
-            <div class="card">
-              <div class="file">
-                <a href="#">
-                  <div class="hover">
-                    <button type="button" class="btn btn-icon btn-outline-dark">
-                      <i class="fas fa-share-alt"></i>
-                    </button>
-                    <button type="button" class="btn btn-icon btn-primary">
-                      <i class="fas fa-arrow-down"></i>
-                    </button>
-                  </div>
-                  <div class="icon">
-                    <i class="far fa-image "></i>
-                  </div>
-                  <div class="file-name">
-                    <p class="m-b-5 text-muted">Document_2017.doc</p>
-                    <small>Size: 89KB</small>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-12">
-            <div class="card">
-              <div class="file">
-                <a href="#">
-                  <div class="hover">
-                    <button type="button" class="btn btn-icon btn-outline-dark">
-                      <i class="fas fa-share-alt"></i>
-                    </button>
-                    <button type="button" class="btn btn-icon btn-primary">
-                      <i class="fas fa-arrow-down"></i>
-                    </button>
-                  </div>
-                  <div class="icon">
-                    <i class="far fa-image "></i>
-                  </div>
-                  <div class="file-name">
-                    <p class="m-b-5 text-muted">Document_2017.doc</p>
-                    <small>Size: 89KB</small>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-12">
-            <div class="card">
-              <div class="file">
-                <a href="#">
-                  <div class="hover">
-                    <button type="button" class="btn btn-icon btn-outline-dark">
-                      <i class="fas fa-share-alt"></i>
-                    </button>
-                    <button type="button" class="btn btn-icon btn-primary">
-                      <i class="fas fa-arrow-down"></i>
-                    </button>
-                  </div>
-                  <div class="icon">
-                    <i class="far fa-image "></i>
-                  </div>
-                  <div class="file-name">
-                    <p class="m-b-5 text-muted">Report2016.xls</p>
-                    <small>Size: 68KB</small>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-12">
-            <div class="card">
-              <div class="file">
-                <a href="#">
-                  <div class="hover">
-                    <button type="button" class="btn btn-icon btn-outline-dark">
-                      <i class="fas fa-share-alt"></i>
-                    </button>
-                    <button type="button" class="btn btn-icon btn-primary">
-                      <i class="fas fa-arrow-down"></i>
-                    </button>
-                  </div>
-                  <div class="icon">
-                    <i class="far fa-image "></i>
-                  </div>
-                  <div class="file-name">
-                    <p class="m-b-5 text-muted">Report2016.xls</p>
-                    <small>Size: 68KB</small>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-12">
-            <div class="card">
-              <div class="file">
-                <a href="#">
-                  <div class="hover">
-                    <button type="button" class="btn btn-icon btn-outline-dark">
-                      <i class="fas fa-share-alt"></i>
-                    </button>
-                    <button type="button" class="btn btn-icon btn-primary">
-                      <i class="fas fa-arrow-down"></i>
-                    </button>
-                  </div>
-                  <div class="icon">
-                    <i class="far fa-image "></i>
-                  </div>
-                  <div class="file-name">
-                    <p class="m-b-5 text-muted">asdf hhkj.pdf</p>
-                    <small>Size: 3MB</small>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-12">
-            <div class="card">
-              <div class="file">
-                <a href="#">
-                  <div class="hover">
-                    <button type="button" class="btn btn-icon btn-outline-dark">
-                      <i class="fas fa-share-alt"></i>
-                    </button>
-                    <button type="button" class="btn btn-icon btn-primary">
-                      <i class="fas fa-arrow-down"></i>
-                    </button>
-                  </div>
-                  <div class="icon">
-                    <i class="far fa-image "></i>
-                  </div>
-                  <div class="file-name">
-                    <p class="m-b-5 text-muted">asdf hhkj.pdf</p>
-                    <small>Size: 3MB</small>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-12">
-            <div class="card">
-              <div class="file">
-                <a href="#">
-                  <div class="hover">
-                    <button type="button" class="btn btn-icon btn-outline-dark">
-                      <i class="fas fa-share-alt"></i>
-                    </button>
-                    <button type="button" class="btn btn-icon btn-primary">
-                      <i class="fas fa-arrow-down"></i>
-                    </button>
-                  </div>
-                  <div class="icon">
-                    <i class="far fa-image "></i>
-                  </div>
-                  <div class="file-name">
-                    <p class="m-b-5 text-muted">asdf hhkj.pdf</p>
-                    <small>Size: 3MB</small>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-12">
-            <div class="card">
-              <div class="file">
-                <a href="#">
-                  <div class="hover">
-                    <button type="button" class="btn btn-icon btn-outline-dark">
-                      <i class="fas fa-share-alt"></i>
-                    </button>
-                    <button type="button" class="btn btn-icon btn-primary">
-                      <i class="fas fa-arrow-down"></i>
-                    </button>
-                  </div>
-                  <div class="icon">
-                    <i class="far fa-image "></i>
-                  </div>
-                  <div class="file-name">
-                    <p class="m-b-5 text-muted">asdf hhkj.pdf</p>
-                    <small>Size: 3MB</small>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-12">
-            <div class="card">
-              <div class="file">
-                <a href="#">
-                  <div class="hover">
-                    <button type="button" class="btn btn-icon btn-outline-dark">
-                      <i class="fas fa-share-alt"></i>
-                    </button>
-                    <button type="button" class="btn btn-icon btn-primary">
-                      <i class="fas fa-arrow-down"></i>
-                    </button>
-                  </div>
-                  <div class="icon">
-                    <i class="far fa-image "></i>
-                  </div>
-                  <div class="file-name">
-                    <p class="m-b-5 text-muted">Report2016.xls</p>
-                    <small>Size: 68KB</small>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-12">
-            <div class="card">
-              <div class="file">
-                <a href="#">
-                  <div class="hover">
-                    <button type="button" class="btn btn-icon btn-outline-dark">
-                      <i class="fas fa-share-alt"></i>
-                    </button>
-                    <button type="button" class="btn btn-icon btn-primary">
-                      <i class="fas fa-arrow-down"></i>
-                    </button>
-                  </div>
-                  <div class="icon">
-                    <i class="far fa-image "></i>
-                  </div>
-                  <div class="file-name">
-                    <p class="m-b-5 text-muted">Report2017.xls</p>
-                    <small>Size: 103KB</small>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-12">
-            <div class="card">
-              <div class="file">
-                <a href="#">
-                  <div class="hover">
-                    <button type="button" class="btn btn-icon btn-outline-dark">
-                      <i class="fas fa-share-alt"></i>
-                    </button>
-                    <button type="button" class="btn btn-icon btn-primary">
-                      <i class="fas fa-arrow-down"></i>
-                    </button>
-                  </div>
-                  <div class="icon">
-                    <i class="far fa-image "></i>
-                  </div>
-                  <div class="file-name">
-                    <p class="m-b-5 text-muted">Report2016.xls</p>
-                    <small>Size: 68KB</small>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div> -->
         </div>
       </div>
     </div>
