--- a/Client/templates/home.html
+++ b/Client/templates/home.html
@@ -148,35 +148,6 @@
       </div>
     </div>
 
-      <!-- Share modal -->
-    <div class="modal" id="myModal">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-    
-          <form action="{{ url_for('share') }}" method="post">
-            <div class="modal-header">
-              <h4 class="modal-title">Share this image</h4>
-              <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-            </div>
-      
-            <div class="modal-body">
-                <div class="mb-0">
-                  <label for="user-id" class="col-form-label">User ID:</label>
-                  <input type="text" class="form-control" id="user-id"/>
-
-                  <label for="user-file" class="col-form-label user-file">File:</label>
-                </div>
-            </div>
-      
-            <div class="modal-footer">
-              <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Share</button>
-            </div>
-          </form>
-    
-        </div>
-      </div>
-    </div>
-
     <!-- Main content -->
     <div id="main-content" class="file_manager">
       <div class="container">
@@ -187,7 +158,7 @@
                     <div class="file">
                       <a href="#">
                         <div class="hover">
-                          <button type="button" class="btn btn-icon btn-outline-dark" data-bs-toggle="modal" data-bs-target="#myModal" data-bs-whatever="{{ file[0] }}">
+                          <button type="button" class="btn btn-icon btn-outline-dark" data-bs-toggle="modal" data-bs-target="#myModal" data-bs-whatever="adu">
                             <i class="fas fa-share-alt"></i>
                           </button>
                           <button type="button" class="btn btn-icon btn-primary">
@@ -205,6 +176,35 @@
                     </div>
                   </div>
                 </div>
+
+                <div class="modal" id="myModal">
+                  <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                
+                      <form action="{{ url_for('share') }}" method="post">
+                        <div class="modal-header">
+                          <h4 class="modal-title">Share this image</h4>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                        </div>
+                  
+                        <div class="modal-body">
+                            <div class="mb-0">
+                              <label for="user-id" class="col-form-label">User ID:</label>
+                              <input type="text" class="form-control" id="user-id"/>
+            
+                              <label for="user-file" class="col-form-label">File:</label>
+                              <input type="text" class="form-control" name="user-file" id="user-file" value="{{ file[0] }}" readonly>
+                            </div>
+                        </div>
+                  
+                        <div class="modal-footer">
+                          <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Share</button>
+                        </div>
+                      </form>
+                
+                    </div>
+                  </div>
+                </div>
             {% endfor %}
         </div>
       </div>
@@ -216,15 +216,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/js/fontawesome.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-
-  <script>
-    $('#myModal').on('show.bs.modal', (event) => {
-      var button = $(event.relatedTarget)
-      var filename = button.data('bs-whatever')
-      var modal = $(this)
-      modal.find('.modal-body label .user-file').html(filename)
-    })
-  </script>
 
   <!--
     <button type="button" class="btn btn-icon btn-danger">
