ok ngon, thiếu share

--- a/Client/templates/home.html
+++ b/Client/templates/home.html
@@ -190,7 +190,7 @@
                         <div class="modal-body">
                             <div class="mb-0">
                               <label for="user-id" class="col-form-label">User ID:</label>
-                              <input type="text" class="form-control" id="user-id"/>
+                              <input type="text" class="form-control" id="user-id" name="user-id"/>
             
                               <label for="user-file" class="col-form-label">File:</label>
                               <input type="text" class="form-control" name="user-file" id="user-file" value="{{ file[0] }}" readonly>
