--- a/Client/templates/home.html
+++ b/Client/templates/home.html
@@ -219,7 +219,7 @@
                           <button type="button" class="btn btn-icon btn-outline-dark" data-bs-toggle="modal" data-bs-target="#myModal" data-bs-whatever="adu">
                             <i class="fas fa-share-alt"></i>
                           </button>
-                          <button type="button" class="btn btn-icon btn-primary">
+                          <button type="button" class="btn btn-icon btn-primary" data-bs-toggle="modal" data-bs-target="#myModal2" data-bs-whatever="adu">
                             <i class="fas fa-arrow-down"></i>
                           </button>
                         </div>
